--- a/Scapegame/engine.cfg
+++ b/Scapegame/engine.cfg
@@ -1,12 +1,10 @@
-; Engine configuration file.
-; It's best to edit using the editor UI, not directly,
-; becausethe parameters that go here are not obvious.
-; 
-; Format: 
-;   [section] ; section goes between []
-;   param=value ; assign values to parameters
-
-
 [application]
-name="Scapegame"
+
+name="Jumper"
 icon="icon.png"
+
+[display]
+
+width=400
+height=600
+orientation="portrait"
