--- a/Scapegame/engine.cfg
+++ b/Scapegame/engine.cfg
@@ -1,6 +1,7 @@
 [application]
 
 name="Jumper"
+main_scene="res://levels/level01.scn"
 icon="icon.png"
 
 [display]
@@ -8,3 +9,7 @@ icon="icon.png"
 width=400
 height=600
 orientation="portrait"
+fullscreen=false
+resizable=false
+stretch_mode="2d"
+stretch_aspect="keep"
