--- a/Scapegame/engine.cfg
+++ b/Scapegame/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="Jumper"
-main_scene="res://levels/level01.scn"
+main_scene="res://gui/main_menu.scn"
 icon="icon.png"
 
 [display]
