--- a/Scapegame/engine.cfg
+++ b/Scapegame/engine.cfg
@@ -4,12 +4,16 @@ name="Jumper"
 main_scene="res://gui/main_menu.scn"
 icon="icon.png"
 
+[autoload]
+
+Global="res://global.gd"
+
 [display]
 
+resizable=false
 width=400
 height=600
 orientation="portrait"
 fullscreen=false
-resizable=false
 stretch_mode="2d"
-stretch_aspect="keep"
+stretch_aspect="keep_width"
