--- a/Scapegame/export.cfg
+++ b/Scapegame/export.cfg
@@ -1,9 +1,19 @@
 [convert_images]
 
-action="none"
+action="compress_ram"
 compress_quality=0.7
 formats="png"
 shrink=1.0
+
+[convert_samples]
+
+action="none"
+max_hz=44100
+trim=false
+
+[convert_scenes]
+
+convert_text_scenes=true
 
 [export_filter]
 
@@ -228,6 +238,7 @@ options/memory_size=3
 binary/64_bits=true
 custom_binary/debug=""
 custom_binary/release=""
+resources/bundle_dependencies_(for_optical_disc)=false
 resources/pack_mode=0
 
 [platform:Mac OSX]
@@ -250,7 +261,24 @@ display/high_res=false
 binary/64_bits=true
 custom_binary/debug=""
 custom_binary/release=""
+icon/icon_ico=""
+icon/icon_png=""
+icon/icon_png128x128=true
+icon/icon_png16x16=true
+icon/icon_png256x256=true
+icon/icon_png32x32=true
+icon/icon_png48x48=true
+icon/icon_png64x64=true
+resources/bundle_dependencies_(for_optical_disc)=false
 resources/pack_mode=1
+version_info/add_godot_version=true
+version_info/company_name="Godot Engine"
+version_info/file_description="Created With Godot Engine"
+version_info/legal_copyright="Copyright (c) 2007-2016 Juan Linietsky, Ariel Manzur"
+version_info/product_name="$genname"
+version_info/version_major=1
+version_info/version_minor=0
+version_info/version_text="1.0"
 
 [script]
 
