Added springs and more beauty gui (?

--- a/Scapegame/engine.cfg
+++ b/Scapegame/engine.cfg
@@ -15,5 +15,5 @@ width=400
 height=600
 orientation="portrait"
 fullscreen=false
-stretch_mode="2d"
-stretch_aspect="keep_width"
+stretch_mode="viewport"
+stretch_aspect="ignore"
