--- a/Scapegame/engine.cfg
+++ b/Scapegame/engine.cfg
@@ -6,7 +6,7 @@ icon="res://icon.png"
 
 [autoload]
 
-Global="res://global.gd"
+Global="*res://global.gd"
 
 [display]
 
@@ -17,3 +17,7 @@ orientation="portrait"
 fullscreen=false
 stretch_mode="viewport"
 stretch_aspect="ignore"
+
+[render]
+
+default_clear_color=#ff9de1f3
