--- a/Scapegame/engine.cfg
+++ b/Scapegame/engine.cfg
@@ -18,6 +18,10 @@ fullscreen=false
 stretch_mode="viewport"
 stretch_aspect="ignore"
 
+[physics_2d]
+
+cell_size=64
+
 [render]
 
 default_clear_color=#ff9de1f3
