--- a/Scapegame/engine.cfg
+++ b/Scapegame/engine.cfg
@@ -1,6 +1,6 @@
 [application]
 
-name="Jumper"
+name="Bunny Jumper"
 main_scene="res://gui/main_menu.scn"
 icon="res://icon.png"
 
@@ -24,4 +24,4 @@ cell_size=64
 
 [render]
 
-default_clear_color=#ff9de1f3
+default_clear_color=#ff222526
