--- a/Scapegame/engine.cfg
+++ b/Scapegame/engine.cfg
@@ -10,13 +10,15 @@ Global="*res://global.gd"
 
 [display]
 
-resizable=false
+test_width=720
+test_height=600
 width=400
 height=600
+stretch_mode="2d"
+stretch_aspect="keep_width"
+resizable=false
 orientation="portrait"
 fullscreen=false
-stretch_mode="viewport"
-stretch_aspect="ignore"
 
 [physics_2d]
 
