--- a/Scapegame/engine.cfg
+++ b/Scapegame/engine.cfg
@@ -10,12 +10,12 @@ Global="*res://global.gd"
 
 [display]
 
-test_width=720
-test_height=600
+test_width=240
+test_height=320
+stretch_aspect="ignore"
 width=400
 height=600
 stretch_mode="2d"
-stretch_aspect="keep_width"
 resizable=false
 orientation="portrait"
 fullscreen=false
