--- a/Scapegame/engine.cfg
+++ b/Scapegame/engine.cfg
@@ -10,13 +10,11 @@ Global="*res://global.gd"
 
 [display]
 
-test_width=240
-test_height=320
+resizable=true
 stretch_aspect="ignore"
 width=400
 height=600
 stretch_mode="2d"
-resizable=false
 orientation="portrait"
 fullscreen=false
 
